--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.google.com/specimen/Montserrat');
 @import url('https://fonts.googleapis.com/css2?family=Archivo:wght@500&display=swap');
 
-@media(max-width: 750px) {
+@media(min-width: 750px){
+
     body {
         display: flex;
         flex-direction: column;
@@ -10,6 +11,164 @@
         padding: 0;
         width: 100vw;
         height: 100vh;
+        background-color: hsl(30, 38%, 92%);
+    }
+
+    .container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 2rem auto;
+        padding: 0;
+        width: 100vw;
+        height: 100vh;
+        background-color: hsl(30, 38%, 92%);
+    }
+
+    h1 {
+        margin: 0;
+    }
+
+    p {
+        font-size: 14px;
+        color: hsl(228, 12%, 48%);
+        font-family: 'Montserrat', sans-serif;
+        padding-left: 1.5rem;
+        padding-right: 1.5rem;
+        margin: 0;
+        font-weight: 600;
+        opacity: 70%;
+        line-height: 1.4rem;
+    }
+
+    .card-body {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: space-around;
+        background-color: hsl(0, 0%, 100%);
+        border-radius: 0 10px 10px 0;
+        width: 25%;
+        height: 50%;
+    }
+
+    .category {
+        color: hsl(228, 12%, 48%);
+        font-family: 'Montserrat', sans-serif;
+        padding-left: 1.5rem;
+        padding-right: 1.5rem;
+        margin: 1.5rem 0 0 0;
+        font-weight: 600;
+    }
+
+    .title-product {
+        padding-left: 1.5rem;
+        padding-right: 1.5rem;
+        font-family: 'Times New Roman', sans-serif;
+        font-weight: 700;
+        margin: 0.5rem 0 1rem 0;
+    }
+
+    .prices {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        margin-top: 1.5rem;
+    }
+
+    .prices h1 {
+        margin: 0;
+        padding-left: 1.5rem;
+        padding-right: 1.5rem;
+        color: hsl(158, 36%, 37%);
+        font-family: 'Montserrat', sans-serif;
+        font-weight: 700;
+    }
+
+    .prices h4 {
+        margin: 0;
+        padding-right: 1.5rem;
+        color: hsl(228, 12%, 48%);
+        text-decoration: line-through;
+        font-weight: 900;
+        opacity: 70%;
+    }
+
+    .img-desktop {
+        width: 25%;
+        height: 50%;
+        border-radius: 10px 0 0 10px;
+    }
+
+    .img-mobile {
+        display: none;
+    }
+
+    .img-cart {
+        padding-right: 0.8rem;
+    }
+
+    .button-cart {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 1rem 1.5rem 1.5rem 1rem;
+        width: 92%;
+    }
+
+    .button-cart button {
+        background-color: hsl(158, 36%, 37%);
+        border-radius: 7px;
+        border: none;
+        color: white;
+        font-weight: 600;
+        padding: 1rem;
+        width: 95%;
+    }
+
+    .button-cart button:hover {
+        background-color: hsl(158, 20%, 37%);
+        border-radius: 7px;
+        border: none;
+        color: white;
+        font-weight: 600;
+        padding: 1rem;
+        width: 95%;
+        cursor: pointer;
+    }
+
+    .attribution {
+        display: flex;
+        font-size: 11px;
+        text-align: center;
+        margin-top: 3rem;
+    }
+    
+    .attribution a {
+        color: hsl(228, 45%, 44%);
+    }
+}
+
+
+/*----------Mobile-----------*/
+@media(min-width: 100px) and (max-width: 750px) {
+    body {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 2rem auto;
+        padding: 0;
+        width: 100vw;
+        height: 100vh;
+        background-color: hsl(30, 38%, 92%);
+    }
+
+    .container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 2rem auto;
+        padding: 0;
         background-color: hsl(30, 38%, 92%);
     }
 
@@ -80,9 +239,17 @@
         opacity: 70%;
     }
 
-    .img-main {
+    .img-mobile {
         width: 92%;
         border-radius: 10px 10px 0 0;
+    }
+
+    .img-desktop {
+       display: none;
+    }
+
+    .img-cart {
+        padding-right: 0.8rem;
     }
 
     .button-cart {
@@ -114,15 +281,15 @@
         cursor: pointer;
     }
 
+    .attribution {
+        font-size: 11px;
+        text-align: center;
+        margin-top: 3rem;
+    }
+    
+    .attribution a {
+        color: hsl(228, 45%, 44%);
+    }
+
 }
 
-.attribution {
-    display: flex;
-    font-size: 11px;
-    text-align: center;
-    margin-top: 3rem;
-}
-
-.attribution a {
-    color: hsl(228, 45%, 44%);
-}
