--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 @import url('https://fonts.google.com/specimen/Montserrat');
 @import url('https://fonts.googleapis.com/css2?family=Archivo:wght@500&display=swap');
 
-@media(min-width: 750px){
+@media(min-width: 750px) {
 
     body {
         display: flex;
         flex-direction: column;
         align-items: center;
-        margin: 2rem auto;
+        margin: auto;
         padding: 0;
         width: 100vw;
         height: 100vh;
@@ -67,6 +67,8 @@
         font-family: 'Times New Roman', sans-serif;
         font-weight: 700;
         margin: 0.5rem 0 1rem 0;
+        font-size: 45px;
+        line-height: 2.5rem;
     }
 
     .prices {
@@ -112,8 +114,8 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        padding: 1rem 1.5rem 1.5rem 1rem;
-        width: 92%;
+        padding: 1rem 0 0 1rem;
+        width: 90%;
     }
 
     .button-cart button {
@@ -143,7 +145,7 @@
         text-align: center;
         margin-top: 3rem;
     }
-    
+
     .attribution a {
         color: hsl(228, 45%, 44%);
     }
@@ -245,7 +247,7 @@
     }
 
     .img-desktop {
-       display: none;
+        display: none;
     }
 
     .img-cart {
@@ -286,10 +288,9 @@
         text-align: center;
         margin-top: 3rem;
     }
-    
+
     .attribution a {
         color: hsl(228, 45%, 44%);
     }
 
 }
-
