fix: diminuição na altura do card

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.google.com/specimen/Montserrat');
 @import url('https://fonts.googleapis.com/css2?family=Archivo:wght@500&display=swap');
 
+/*----------Desktop-----------*/
 @media(min-width: 750px) {
 
     body {
@@ -49,7 +50,7 @@
         background-color: hsl(0, 0%, 100%);
         border-radius: 0 10px 10px 0;
         width: 25%;
-        height: 70%;
+        height: 60%;
     }
 
     .category {
@@ -98,7 +99,7 @@
 
     .img-desktop {
         width: 25%;
-        height: 70%;
+        height: 60%;
         border-radius: 10px 0 0 10px;
     }
 
